@@ -1,3 +1,8 @@
+2006-10-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* priv/lib/Makefile.am: Symbolic link for stringprep_drv.so,
+	tls_drv.so and iconv_erl.so are useless.
+
 2006-10-12  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/exmpp_xml.erl (start_parser): Unload driver if an error occurs
